# bike_city_innsbruck

./: .gitignore  README.md  pyproject.toml  requirements.txt
bike_city_innsbruck/: config.py  data.py  features.py  metrics.py  modeling.py  plots.py  preprocess.py
notebooks/: 01_results_overview.ipynb
references/: methodology-notes.md  osm-tagging-notes.md
scripts/: 01_extract_data.py  02_clean_data.py  03_compute_metrics.py  04_spatial_analysis.py  05_cluster_gaps.py  06_make_figures.py
